[project]
name = "enext_exchange_py"
version = "0.1.3"
description = "Provides access to real-time and historical financial data from various exchanges"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "parsel>=1.11.0",
    "pycryptodome>=3.23.0",
    "python-dateutil>=2.9.0.post0",
]

[project.urls]
repository = "https://github.com/jotonedev/enext-exchange-py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",                    # Show summary of all tests
    "-q",                     # Quiet mode
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on config issues
    "-v",                     # Verbose output
]
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.ruff]
exclude = ["__init__.py"]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
